v3.4.1 (2025-01-25)
 * Bugfix: since v3.3.0, oscillator 1 went silent whenever the modulator
   additive volume parameter was being changed or controlled by an LFO. This
   has been fixed (https://github.com/attilammagyar/js80p/issues/35).
 * Bugfix: in the Stalacpipe Organ preset, subsequent notes could affect the
   pitch of already scheduled water droplet sounds which could lead to
   unnatural sounds when very high and very low notes were alternating. Now
   once scheduled, water droplets will maintain their pitch regardless of
   subsequent notes.
 * Bugfix: the VST 3 plugin used to ignore certain requests by the host to
   clear its state and echo and reverb buffers
   (https://github.com/attilammagyar/js80p/issues/34).

v3.4.0 (2025-01-12)
 * Oscillators can now be mixed with noise.
 * The Echo and Reverb effects can now be gated by switching their side-chain
   compression into expansion mode.
 * Add a basic Tape simulation effect for slow-down stops, lo-fi wow and
   flutter, saturation and tone coloring, etc.
 * New presets:
    * FX Master Enhancer, a preset for using JS80P as a master bus effect
      rather than a synthesizer.
    * Creepy Wind for making eerie wind sound Foley effects.
    * Stalacpipe Organ, the sound of the largest musical instrument in the
      world.
 * Bugfix: fixed the positioning of the distortion type selectors on the user
   interface.

v3.3.0 (2024-12-11)
 * The MIX (modulator additive volume) parameter can now be controlled with
   envelopes and polyphonic LFOs.
 * New presets: Expressive Saw, a preset where your playing style can
   dramatically change the sound, and Flute Mono, a monophonic version of the
   Flute preset.
 * Bugfix: LoongArch VST3 packaging has been fixed in the source distribution
   thanks to @YHStar.

v3.2.1 (2024-11-17)
 * The meaning of the Macro and Envelope scale parameters, and the LFO
   amplitude parameter have been clarified on the user interface and in the
   documentation.
